5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1595_1015.log
== TEST (2019-03-21 16:43:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))

-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(min(a,b,c)-(max(a,b,c))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 10
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(min(a,b,c)-(max(a,b,c)))
print(max(a,b,c))
-- OUTPUT:
-2
-12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(min(a+b+c)-(max(a,b,c)))
print(max(a,b,c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(min(a+b+c)-(max(a,b,c)))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:47:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(min(a-b-c)-(max(a+b+c)))
print(max(a,b,c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(min(a-b-c)-(max(a+b+c)))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:47:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(min(a-b-c)+(max(a+b+c)))
print(max(a,b,c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(min(a-b-c)+(max(a+b+c)))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(a+b+c+(min(a,b,c)-(max(a,b,c))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 10
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(a+b+c+(min(a,b,c)-(max(a,b,c)))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 10
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(a+b+c+(min(a,b,c)-(max(a,b,c))))
print(max(a,b,c))
-- OUTPUT:
-2
-4
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:49:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(a+b+c+(min(a,b,c)-(max(a,b,c))))
print(max(a,b,c))
-- EXECUTION TIME:
0.160488
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(a+b+c+(min(a,b,c)-(max(a,b,c))))
print(max(a,b,c))
-- OUTPUT:
-2
-4
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(a+b+c-(min(a,b,c)-(max(a,b,c))))
print(max(a,b,c))
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:03:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(min(a,b,c)-(max(a,b,c))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 10
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:03:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print(min(a,b,c)-(max(a,b,c)))
print(max(a,b,c))
-- OUTPUT:
-2
-12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:47:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print((a+b+c)min(a,b,c)-(max(a,b,c)))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 9
    print((a+b+c)min(a,b,c)-(max(a,b,c)))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:47:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print((a+b+c)+min(a,b,c)-(max(a,b,c)))
print(max(a,b,c))
-- OUTPUT:
-2
-4
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:48:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print((max(a,b,c)-min(a,b,c))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 10
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:48:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print((max(a,b,c)-min(a,b,c)))
print(max(a,b,c))
-- OUTPUT:
-2
12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:48:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))

print(min(a,b,c))
print((max(a,b,c)-min(a,b,c)))
print(max(a,b,c))
-- EXECUTION TIME:
0.149208
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:52:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("insira o valor de A:"))
b= int(input("insira o valor de B:"))
c= int(input("insira o valor de C:"))
m=min(a,b,c)
M= max(a,b,c)
s=(a+b+c)-m-M
print(m)
print(s)
print(M)
-- EXECUTION TIME:
0.213028
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
